# French-AI-Teaching-Assistant-Using-RAG-And-Langchain

./: .gitignore  Dockerfile  README.md  api.py  debug_query.py  image_pdf_check.py  main.py  ocr_scanned_books.py  package-lock.json  pdf_duplicate_cleaner.py  pyproject.toml  requirements.txt  streamlit_app.py
data/: indexed_files.json  knowledge_index.json
data/text_files/: machine_intro.txt  python_intro.txt
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  format.js  index.css
frontend/src/components/: ChatInput.jsx  (+5 more)
notebook/: document.ipynb  experiment.ipynb  prompt.txt  response.txt
planner/: search_planner.py
retriever/: metadata_filter.py
src/: config.py  data_loader.py  embedding.py  file_tracker.py  ingest.py  ollama_client.py  prompt_builder.py  retriever.py  retriever1.py  split_document.py  vector_store.py
src/LLM/: base_llm.py  llm_factory.py  llm_generator.py  ollama_client.py  openai_client.py
src/embedding/: base_embedding.py  embedding.py  embedding_factory.py  openai_embedding.py
src/knowledge/: knowledge_index_builder.py  metadata_extractor.py  models.py  pdf_scanner.py  sommaire_parser.py
src/query/: book_detector.py  book_type_detector.py  intent_detector.py  level_detector.py  query_analyzer.py  structure_detector.py  topic_detector.py
src/retriever/: exact_retriever.py  reranker.py  retriever.py  semantic_retriever.py
tests/: conftest.py  test_book_detector.py  test_exact_retriever.py  test_hybrid_retrieval.py  test_reranker.py  test_sommaire_parser.py
(+3 files in other folders)
